--- a/.github/workflows/model-integrity-check.yml
+++ b/.github/workflows/model-integrity-check.yml
@@ -51,9 +51,13 @@ jobs:
       - name: 📦 Install Dependencies
         run: |
           pip install --upgrade pip
-          pip install -r ChainBridge/chainiq-service/requirements.txt
+          # Install chainiq requirements if they exist (required for model checks)
+          if [ -f "ChainBridge/chainiq-service/requirements.txt" ]; then
+            pip install -r ChainBridge/chainiq-service/requirements.txt
+          fi
           # Optional: Install PQC library for quantum-resistant verification
-          pip install liboqs-python || echo "⚠️ PQC library not available - using SHA256 only"
+          # This is genuinely optional - SHA256 fallback is acceptable
+          pip install liboqs-python || echo "PQC library not available - using SHA256 only"
 
       - name: 🔍 Find Model Files
         id: find_models
