wip: CINDY hygiene drift bucket — env/gitignore changes (2 files)
Split from ATLAS safety stash for isolated review.
Owner: CINDY (GID-06)

--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,50 @@ TIMEFRAME="5m"
 # -- Risk Management --
 # Cooldown period in minutes after a trade signal to prevent over-trading.
 COOLDOWN_MINUTES="10"
+
+# ----------------------------------------------------
+# Security & Rate Limiting (DAN GID-07)
+# ----------------------------------------------------
+
+# -- Rate Limiting --
+# Enable/disable rate limiting (default: true)
+RATE_LIMIT_ENABLED="true"
+# Default requests per minute for most endpoints
+RATE_LIMIT_DEFAULT="100"
+# Stricter limit for sensitive endpoints (/oc/agents, /oc/decisions/*)
+RATE_LIMIT_STRICT="30"
+# Burst multiplier (allows temporary burst up to limit * multiplier)
+RATE_LIMIT_BURST="2.0"
+# Sliding window size in seconds
+RATE_LIMIT_WINDOW="60"
+
+# -- Authentication --
+# Enable authentication (default: false for local dev)
+AUTH_ENABLED="false"
+# JWT/signing secret for token generation (required if AUTH_ENABLED=true)
+# Generate with: openssl rand -hex 32
+JWT_SECRET=""
+# Alternative: SIGNING_KEY for other signing operations
+SIGNING_KEY=""
+# Require signing key for startup (default: false)
+REQUIRE_SIGNING_KEY="false"
+
+# ----------------------------------------------------
+# Trust Signals & System Health (DAN GID-07 PAC-06-C)
+# ----------------------------------------------------
+# Thresholds for /health/trust endpoint red/amber/green status
+
+# -- Event Latency (seconds since last OC decision) --
+# GREEN: < 60s, AMBER: < 300s, RED: >= 300s
+TRUST_LATENCY_GREEN="60"
+TRUST_LATENCY_AMBER="300"
+
+# -- Backlog Depth (unreviewed decisions count) --
+# GREEN: < 10, AMBER: < 50, RED: >= 50
+TRUST_BACKLOG_GREEN="10"
+TRUST_BACKLOG_AMBER="50"
+
+# -- Override Rate (percent of decisions overridden) --
+# GREEN: < 5%, AMBER: < 15%, RED: >= 15%
+TRUST_OVERRIDE_GREEN="5"
+TRUST_OVERRIDE_AMBER="15"
