governance: add ATLAS Move Matrix for PR #18 file moves
- Add ATLAS-MOVE-MATRIX-2025-12-16 approving git rename detections
- Fix .gitignore to allow docs/governance/*.json and .github/**/*.json
- Approves 3 detected moves (1 false positive, 2 legitimate refactors)

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,11 @@ venv/
 logs/
 *.log
 *.json
+!docs/governance/*.json
+!.github/**/*.json
+!package.json
+!package-lock.json
+!tsconfig.json
 benson_metrics.json
 multi_signal_trades.json
 trading_metrics.json
