ci: add httpx test dependency for FastAPI TestClient
Required by starlette.testclient used in tests/chainboard/

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,6 +8,9 @@
 pytest-xdist>=3.5.0
 pytest-benchmark>=4.0.0
 
+# HTTP client for FastAPI/Starlette TestClient
+httpx>=0.24.0
+
 # Machine Learning dependencies
 tensorflow>=2.8.0
 scikit-learn>=1.0.0
