--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -26,3 +26,13 @@ schedule>=1.1.0
 # Other utilities
 pandas>=1.3.0
 numpy>=1.21.0
+
+# Database and settings
+sqlalchemy>=2.0.0
+pydantic-settings>=2.0.0
+
+# CI/test imports (ChainBridge Unified CI)
+numpy
+scikit-learn
+sqlalchemy
+pydantic-settings
