--- a/.github/workflows/chainbridge-ci.yml
+++ b/.github/workflows/chainbridge-ci.yml
@@ -251,7 +251,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest pytest-cov
+          pip install pytest pytest-cov pytest-asyncio
+          pip install httpx numpy scikit-learn sqlalchemy pydantic-settings
 
       - name: Run ChainIQ sanity checks
         working-directory: ChainBridge/chainiq-service
