ci(chainboard-ui): track package-lock.json for npm ci in CI
- Fix .gitignore: use /chainboard-ui/ to only ignore root dir
- Fix ChainBridge/.gitignore: remove blanket *.json, keep specific ignores
- Add ChainBridge/chainboard-ui/{package.json,package-lock.json,tsconfig.json}

npm ci requires package-lock.json to be committed.

--- a/ChainBridge/.gitignore
+++ b/ChainBridge/.gitignore
@@ -16,7 +16,7 @@ venv/
 .DS_Store
 logs/
 *.log
-*.json
+# Specific json files to ignore (not blanket *.json)
 benson_metrics.json
 multi_signal_trades.json
 trading_metrics.json
