test: standardize pytest warnings capture (non-fatal)
- Add -ra flag to show warnings summary reliably
- Add filterwarnings=default for consistent behavior
- Add optional strict mode via PYTEST_WARNINGS=error (off by default)

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,9 +3,13 @@
 # Always run from repo root with pythonpath set
 pythonpath = .
 testpaths = tests
-addopts = -q --ignore=ChainBridge
+addopts = -q -ra --ignore=ChainBridge
 python_files = test_*.py
 
 # Ignore nested ChainBridge folder — it has its own test suite
 # with different import paths (api.server in that context means ChainBridge/api/)
 norecursedirs = ChainBridge .venv __pycache__ .git
+
+# Warning capture: show summary consistently (non-fatal)
+filterwarnings =
+    default
