fix(chainboard-ui): add missing tsconfig.node.json for TS project references
- Add tsconfig.node.json required by tsconfig.json references
- Fix .gitignore to allow tsconfig.node.json files
- Resolves TS6053 error in CI

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ logs/
 !package.json
 !package-lock.json
 !tsconfig.json
+!tsconfig.node.json
 benson_metrics.json
 multi_signal_trades.json
 trading_metrics.json
