fix(chainboard-ui): track test fixtures for CI type-check
- Add gitignore exception for __fixtures__/*.json files
- Track live_positions_response.json and oc_intel_response.json
- Fixes TS2307 module resolution errors in CI

ATLAS (GID-11) — PR #18 UI fixtures fix

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ logs/
 !package-lock.json
 !tsconfig.json
 !tsconfig.node.json
+!**/__fixtures__/*.json
 benson_metrics.json
 multi_signal_trades.json
 trading_metrics.json
