fix(chainboard-ui): fix tsconfig baseUrl and include patterns for CI
- Change baseUrl from './src' to '.' for correct module resolution
- Update paths alias to match new baseUrl
- Add explicit include patterns for .ts, .tsx, and .json files
- Fixes TS2307 module resolution errors in CI type-check

ATLAS (GID-11) — PR #18 tsconfig fix

--- a/ChainBridge/chainboard-ui/tsconfig.json
+++ b/ChainBridge/chainboard-ui/tsconfig.json
@@ -21,15 +21,18 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "forceConsistentCasingInFileNames": true,
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
       "@/*": [
-        "./*"
+        "./src/*"
       ]
     }
   },
   "include": [
-    "src"
+    "src",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.json"
   ],
   "references": [
     {
