--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ logs/
 !tsconfig.json
 !tsconfig.node.json
 !**/__fixtures__/*.json
+!**/*.sig.json
 benson_metrics.json
 multi_signal_trades.json
 trading_metrics.json
