chore(scope): remove legacy BensonBot models from ChainBridge tracking
BREAKING: Remove non-ChainBridge ML models from git tracking

Legacy models removed (predate ChainBridge, not governed):
- ml_models/enhanced_regime_model.pkl
- ml_models/regime_detection_model.pkl
- strategies/bear_market/*.pkl
- strategies/bull_market/*.pkl
- strategies/sideways_market/*.pkl

ChainBridge-scoped models retained:
- ChainBridge/chainiq-service/ml_models/anomaly_v0.2.0.pkl
- ChainBridge/chainiq-service/ml_models/risk_v0.2.0.pkl

Updated .gitignore to prevent re-addition of legacy models.

Fixes Model Integrity CI scope contamination.
Authorized by: BENSON CTO (GID-00) - Option A

--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,14 @@ coverage*/
 # Note: .chainbridge/models/ signed models CAN be committed
 reports*/
 
+# Legacy BensonBot / Crypto-1.0 models (NOT ChainBridge)
+# These predate ChainBridge and are not governed under ChainBridge security policy
+# ChainBridge models live ONLY in: ChainBridge/chainiq-service/ml_models/
+ml_models/
+strategies/bear_market/*.pkl
+strategies/bull_market/*.pkl
+strategies/sideways_market/*.pkl
+
 # OS junk
 .DS_Store
 Thumbs.db
