chore(security): enforce ChainBridge-only model integrity (remove legacy artifacts)
Option A execution (SAM GID-06 PAC-SAM-SEC-018):
- Remove legacy non-ChainBridge signature files from tracking (strategies/, ml_models/)
- Keep ChainIQ service model signatures under ChainBridge/chainiq-service/ml_models/
- Narrow .gitignore to allow only ChainBridge-scoped *.sig.json

Tracked models after this commit:
- ChainBridge/chainiq-service/ml_models/anomaly_v0.2.0.pkl (+sig.json)
- ChainBridge/chainiq-service/ml_models/risk_v0.2.0.pkl (+sig.json)

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ logs/
 !tsconfig.json
 !tsconfig.node.json
 !**/__fixtures__/*.json
-!**/*.sig.json
+!ChainBridge/**/ml_models/*.sig.json
 benson_metrics.json
 multi_signal_trades.json
 trading_metrics.json
